# recreation

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MODDING.md  MULTIPLAYER.md  README.md  REPORT_STARFIELD.md  REPORT_STARFIELD_PROCGEN.md  REPORT_STARFIELD_TEXTURES.md  flake.nix  todolist.md
engine/asset/: CMakeLists.txt  asset_database.cc  asset_database.h  gltf_loader.cc  material.h  mesh.h  primitives.cc  primitives.h  simplify.cc  simplify.h  texture.h  vfs.cc  vfs.h
engine/asset/src/: asset_database.cc  vfs.cc
engine/audio/: CMakeLists.txt  ambient.cc  ambient.h  audio_clip.cc  audio_clip.h  audio_device.cc  audio_device.h  audio_system.cc  audio_system.h  ffmpeg_codec.cc  ffmpeg_codec.h  ffmpeg_stub.cc  mixer.cc  mixer.h  sound_catalog.cc  sound_catalog.h  spatial.h  wav.cc  wav.h  xwma.cc  xwma.h
engine/bethesda/: CMakeLists.txt  WRITE_ARCHITECTURE.md  archive.h  ba2.cc  biom.cc  biom.h  bsa.cc  converters.cc  converters.h  game_profile.cc  game_profile.h  hkx.cc  hkx_anim.cc  hkx_anim.h  hkx_physics.cc  hkx_physics.h  hkx_to_kinema.cc  hkx_to_kinema.h  load_order.cc  load_order.h  material_db.cc  material_db.h  nif.cc  nif.h  planet.cc  planet.h  plugin.cc  plugin.h  record.h  script_attachment.cc  script_attachment.h  starfield_mesh.cc  starfield_mesh.h  strings.cc  strings.h  tri.cc  tri.h
engine/bethesda/src/: ba2.cc  bsa.cc  converters.cc  nif.cc  strings.cc
engine/core/: CMakeLists.txt  feature_registry.cc  feature_registry.h  features.def  input.h  input_bindings.cc  job_system.cc  job_system.h  math.h  wayland_kde_hdr.cc  wayland_kde_hdr.h  window.h  window_android.cc  window_sdl3.cc
engine/core/src/: frame_timer.cc  job_system.cc  log.cc  window.cc
engine/modstream/: CMakeLists.txt  asset_request.cc  asset_request.h  content_hash.cc  content_hash.h  content_provider.cc  content_provider.h  content_store.cc  content_store.h  manifest_chunk.cc  manifest_chunk.h  manifest_codec.cc  manifest_codec.h  mod_catalog.cc  mod_catalog.h  mod_resource.cc  mod_resource.h  transfer_plan.cc  transfer_plan.h
engine/net/: CMakeLists.txt  asset_stream.cc  asset_stream.h  objective_marker_net.cc  objective_marker_net.h  protocol.h  quest_replication.cc  quest_replication.h  replication.cc  replication.h  session.cc  session.h  war_map_net.cc  war_map_net.h  world_replication.cc  world_replication.h
engine/quest/: CMakeLists.txt  condition.h  ctda.cc  quest_def.cc  quest_def.h  quest_graph.cc  quest_graph.h  quest_import.cc  quest_import.h  quest_system.cc  quest_system.h  scene_compile.cc  scene_compile.h  scene_player.cc
engine/render/: CMakeLists.txt  PROVIDERS.md  README.md  RHI.md  aerial_perspective.cc  aerial_perspective.h  ambient_occlusion.cc  ambient_occlusion.h  bloom.cc  bloom.h  environment.cc  environment.h  exposure.cc  exposure.h  gaussian.cc  gaussian.h  gpu_cull.cc  gpu_cull.h  gpu_profiler.cc  gpu_profiler.h  material_system.cc  material_system.h  mesh_pipeline.cc  mesh_pipeline.h  path_tracer.cc  path_tracer.h  post.cc  post.h  precipitation.cc  precipitation.h  presets.cc  presets.h  raytracing.cc  raytracing.h  render_graph.cc  render_graph.h  renderer.cc  renderer.h  settings.h  shader_util.cc  (+13 more)
engine/render/atmosphere/: aerial_perspective.cc  aerial_perspective.h  clouds.cc  clouds.h  environment.cc  environment.h  froxel_fog.cc  froxel_fog.h  precipitation.cc  precipitation.h  surface_weather.cc  surface_weather.h  volumetric_fog.cc  volumetric_fog.h
engine/render/core/: bindless.cc  bindless.h  render_graph.cc  render_graph.h  renderer.cc  renderer.h  settings.h  settings_ini.cc  settings_ini.h
engine/render/d3d12/: d3d12_backend.h  d3d12_command_list.cc  d3d12_convert.cc  d3d12_device.cc  d3d12_headers.h  d3d12_swapchain.cc
engine/render/geometry/: fur.cc  fur.h  gaussian.cc  gaussian.h  hair_groom.cc  hair_groom.h  hair_strands.cc  hair_strands.h  imposters.cc  imposters.h  ocean_fft.cc  ocean_fft.h  particles.cc  particles.h  water.cc  water.h  (+2 more)
engine/rpc/: CMakeLists.txt  rpc_message.cc  rpc_message.h  rpc_registry.cc  rpc_registry.h  rpc_value.cc  rpc_value.h
engine/script/: CMakeLists.txt  papyrus_guest.cc  papyrus_guest.h  script_system.cc  script_system.h  world_effect_sink.h
engine/weather/: CMakeLists.txt  director.cc  director.h  weather.cc  weather.h  weather_loader.cc  weather_loader.h
runtime/: CMakeLists.txt  actor_system.cc  actor_system.h  android_main.cc  camera_input.cc  chargen.cc  chargen.h  content_load.cc  controls_settings.cc  debug_ui.cc  debug_ui.h  demo_scenes.cc  demo_scenes.h  editor.cc  editor.h  editor_catalog.cc  editor_io.cc  editor_layout.h  engine.cc  engine.h  engine_context.h  face.cc  face.h  first_run.cc  fly_camera.cc  fly_camera.h  frame_loop.cc  game_ui.cc  game_ui.h  gui_backend.cc  gui_backend.h  interaction_system.cc  interaction_system.h  main.cc  main_menu.cc  managed_rpc.cc  managed_scripting.cc  nav_service.cc  nav_service.h  networking.cc  (+15 more)
runtime/shaders/: ugui_frost.ps.hlsl  ugui_frost.vs.hlsl  ugui_quad.ps.hlsl  ugui_quad.vs.hlsl  ugui_text.ps.hlsl  ugui_text.vs.hlsl
runtime/src/: engine.cc  engine.h  main.cc
runtime/ui/: container.ugui  csharp_demo.ugui  dialogue.ugui  first_run.ugui  hud.ugui  hud_gauge.ugui  journal.ugui  main_menu.ugui  pause_menu.ugui  quest.ugui  readout.ugui  scoreboard.ugui  vitals.ugui  war_map.ugui
tools/papyrus/: CMakeLists.txt  asset_streamtest.cc  audiotest.cc  ba2test.cc  bgsm_fo4test.cc  bindingstest.cc  biomtest.cc  codec_fuzztest.cc  dds_srgb_fo4test.cc  dialoguetest.cc  editor_layouttest.cc  featuretest.cc  fibertest.cc  main.cc  material_dbtest.cc  modstreamtest.cc  nativescan.cc  nativesexttest.cc  nif_starfieldtest.cc  objective_marker_nettest.cc  optiontest.cc  proximitytest.cc  quest_aliastest.cc  quest_net_progressiontest.cc  quest_nettest.cc  quest_worldtest.cc  questgraphtest.cc  questimporttest.cc  questtest.cc  rpctest.cc  run.cc  scene_compiletest.cc  scripttest.cc  settings_initest.cc  skytest.cc  starfield_skinned_meshtest.cc  steering_avoidancetest.cc  tritest.cc  vmad.cc  vmad_fo4test.cc  (+3 more)
(+550 files in other folders)
